--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,7 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
+# Putty acces gen
+*.ppk
+
 # End of https://www.gitignore.io/api/pycharm
