--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,12 @@ django-filter==1.0.2
 Pillow==4.3.0
 boto3==1.4.7
 pyfcm==1.4.0
+
+channels==1.1.8
+daphne==1.3.0
+redis==2.10.6
+asgi-redis==1.4.3
+asgiref==1.1.2
+Twisted==17.9.0
+pypiwin32==219
+haikunator==2.1.0
