--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ redis==2.10.6
 asgi-redis==1.4.3
 asgiref==1.1.2
 Twisted==17.9.0
-pypiwin32==219
-haikunator==2.1.0
+Twisted[tls,http2]==17.9.0
+
 pyrebase
