entornos de firebase parametrizados

--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -11,3 +11,13 @@ DATABASES = {
 
 URL_HOST = 'http://127.0.0.1:8000/'
 WEB_HOST = 'http://127.0.0.1:9000/'
+
+
+CONFIG_LINKUP = {
+    "apiKey": "AIzaSyDoYMhDSdfpX84wDFVDDadN7MURM",
+    "authDomain": "licsdp-adwwf4.firebaseapp.com",
+    "databaseURL": "https://ldwda4.firebaseio.com",
+    "projectId": "linkup-ssdad",
+    "storageBucket": "lfef-5b6f4.appspot.com",
+    "messagingSenderId": "65B3D810446"
+}
