agregado config_environment para firebase en setting_secret.example

--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -12,3 +12,26 @@ DATABASES = {
 URL_HOST = 'http://127.0.0.1:8000/'
 WEB_HOST = 'http://127.0.0.1:9000/'
 REDIS_PORT = '6379'
+
+
+CONFIG_ENVIROMENT = {
+    'apiKey': "AIzaSyAz7QZklaiNJ0nsoDfDWHFWXiK6vdMxLMo",
+    'authDomain': "linkup-dev-35b1d.firebaseapp.com",
+    'databaseURL': "https://linkup-dev-35b1d.firebaseio.com",
+    'projectId': "linkup-dev-35b1d",
+    'storageBucket': "linkup-dev-35b1d.appspot.com",
+    'messagingSenderId': "463176206070"
+}
+
+##Tamanio del log en bytes
+#1048576 = 1MB
+#2097152 = 2MB
+#5242880 = 5MB
+
+##niveles de traza para log_level
+# CRITICAL = 50
+# ERROR = 40
+# WARNING = 30
+# INFO = 20
+# DEBUG = 10
+# NOTSET = 0
