--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -14,14 +14,29 @@ WEB_HOST = 'http://127.0.0.1:9000/'
 REDIS_PORT = '6379'
 
 
-CONFIG_ENVIROMENT = {
-    'apiKey': "AIzaSyAz7QZklaiNJ0nsoDfDWHFWXiK6vdMxLMo",
-    'authDomain': "linkup-dev-35b1d.firebaseapp.com",
-    'databaseURL': "https://linkup-dev-35b1d.firebaseio.com",
-    'projectId': "linkup-dev-35b1d",
-    'storageBucket': "linkup-dev-35b1d.appspot.com",
-    'messagingSenderId': "463176206070"
-}
+
+# definimos a la variable config_enviroment el entorno que apuntara el proyecto
+
+# # CONFIG_LINKUP
+#     CONFIG_ENVIROMENT= {
+#     "apiKey": "AIzaSyDoYMhNo1RP1JYrQN1pX84w4YL82N7MURM",
+#     "authDomain": "linkup-5b6f4.firebaseapp.com",
+#     "databaseURL": "https://linkup-5b6f4.firebaseio.com",
+#     "projectId": "linkup-5b6f4",
+#     "storageBucket": "linkup-5b6f4.appspot.com",
+#     "messagingSenderId": "652304810446"
+# }
+#
+# # CONFIG_LOCAL
+#     CONFIG_ENVIROMENT= {
+#     "apiKey": "AIzaSyDFLaQvnBi43cAYnbbIJYM5d8HhjlWuMFw",
+#     "authDomain": "linkup-local.firebaseapp.com",
+#     "databaseURL": "https://linkup-local.firebaseio.com",
+#     "projectId": "linkup-local",
+#     "storageBucket": "linkup-local.appspot.com",
+#     "messagingSenderId": "901859853311"
+# }
+
 
 ##Tamanio del log en bytes
 #1048576 = 1MB
