--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ manage.py
 manage_jb_bkp.py
 api/settings.py
 venv/
+files/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
