fcm server key agregado a settings secret example

--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -17,6 +17,7 @@ REDIS_PORT = '6379'
 # CONFIG_LOCAL
 CONFIG_ENVIROMENT = {
     "apiKey": "AIzaSyDFLaQvnBi43cAYnbbIJYM5d8HhjlWuMFw",
+    "fcmServerKey": "AIzaSyAY_PcGY0Dkj-kOjhgbxgWqWcqL0Xi2otA",
     "authDomain": "linkup-local.firebaseapp.com",
     "databaseURL": "https://linkup-local.firebaseio.com",
     "projectId": "linkup-local",
