--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -24,7 +24,8 @@ CONFIG_ENVIROMENT = {
     "storageBucket": "linkup-local.appspot.com",
     "messagingSenderId": "901859853311"
 }
-
+# SECURITY WARNING: don't run with debug turned on in production!
+DEBUG = True
 
 LOGGER_CONFIG = {
    'files': {
