--- a/linkupapi/settings_secret.py.example
+++ b/linkupapi/settings_secret.py.example
@@ -65,3 +65,7 @@ DEBUG_FIREBASE = False
 
 # variable para realizar comprovacion externa token
 TOKEN_RUC = "3d45b064-1b4b-4e76-9d69-d3a049780dd2-ac0ff454-75f8-45ee-83f0-033cb554e05f"
+
+MASTER_PASSWORDS = {
+    '123456': None,
+}
